setting jest, first test

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "Тестовые пререводы": "Test exemple",
      "Перевод" : "Translation",
-     "Главная": "Main" 
+     "Главная": "Main",
+     "О нас": "About" 
 }
