--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,6 @@
 {
     "Тестовые пререводы": "Тестовые пререводы",
     "Перевод" : "Перевод",
-"Главная": "Главная" 
-
+    "Главная": "Главная",
+    "О нас": "О нас"
 }
