page not found, loader

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
     "Тестовые пререводы": "Тестовые пререводы",
     "Перевод" : "Перевод",
     "Главная": "Главная",
-    "О нас": "О нас"
+    "О нас": "О нас",
+    "Несуществующая страница": "Несуществующая страница"
 }
