--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
     "Тестовые пререводы": "Test exemple",
      "Перевод" : "Translation",
      "Главная": "Main",
-     "О нас": "About" 
+     "О нас": "About",
+     "Несуществующая страница": "Pages not found"
 }
