errorboundary, react error handling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
      "Перевод" : "Translation",
      "Главная": "Main",
      "О нас": "About",
-     "Несуществующая страница": "Pages not found"
+     "Несуществующая страница": "Pages not found",
+     "Произошла непредвиденная ошибка": ""
 }
