--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,6 @@
     "Перевод" : "Перевод",
     "Главная": "Главная",
     "О нас": "О нас",
-    "Несуществующая страница": "Несуществующая страница"
+    "Несуществующая страница": "Несуществующая страница",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка"
 }
