--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,6 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Переключатель": "Checker"
-  
+  "Переключатель": "Checker",
+  "Короткий язык": "En"
 }
