--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
+  "Введите текст": "Введите текст",
   "Язык": "Русский",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Страница не найдена",
@@ -14,5 +15,7 @@
   "Короткий язык": "Ru",
   "Войти": "Войти",
   "increment": "increment",
-  "decrement": "decrement"
+  "decrement": "decrement",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
