Auth Reducers, slices, async thunk Custom text

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,18 +4,20 @@
   "Главная страница": "Main page",
   "Введите текст": "vvedite text",
   "Язык": "English",
-  "новый перевод": "новый перевод",
+  "новый перевод": "new translation",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Reload page",
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Переключить": "Переключить",
+  "Переключить": "Switch",
   "Короткий язык": "En",
   "Войти": "Login",
   "increment": "increment",
   "decrement": "decrement",
-  "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Auth form",
+  "Вы ввели неверный логин или пароль": "You have entered an incorrect username or password"
 }
